--- a/weekcalendar/src/main/AndroidManifest.xml
+++ b/weekcalendar/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="noman.weekcalendar">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
